plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.1.0'
}

application {
    mainClassName = 'me.canelex.spidey.Core'
}

repositories {
    jcenter()
}

dependencies {
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
    implementation (group: 'net.dv8tion', name: 'JDA', version: '4.BETA.0_26') {
        exclude module: 'opus-java'
    }
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.6'
    implementation group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev212-1.25.0'
    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.43'
}

group = 'me.canelex'
description = 'Spidey'
sourceCompatibility = JavaVersion.VERSION_11

shadowJar.setProperty('archiveFileName', 'Spidey.jar')
compileJava.options.encoding = 'UTF-8'